--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
                 </div>
                 <button class = "header-top-button">Buy now ></button>
             </div>
+            <div class="header-container-middle">
+                <p class = "header-motto">Ice Cream made with passion</p>
+            </div>
         </div>
+
+            
         
     </header>
 
