--- a/index.html
+++ b/index.html
@@ -307,12 +307,10 @@
                             </li>
                         </ul>
                     </div>
-
                     <p class = "footer-lower-icons-right-text">Feel free to contact <span>+61 (0) 383 766 284</span></p>
-
-                </div>
+                </div>                  
             </div>
-            
+            <p class = "bottom-text">© 2022 - IceCream. All Rights Reserved.</p>
         </div>
     </footer>
     
@@ -428,7 +426,47 @@
         </div>
     </div>
 
+    <div class="modal-three-overlay is-open">
+        <div class="modal-window-three">
+            <button class = "close-btn" type = "submit">
+                <img class = "modal-close" src = "images/cross.svg" width = "11" height = "11">
+            </button>
+            <p class = "modal-three-header">How it's made?</p>
+            <div class="play-window">
+                <img src="./images/play.svg" width = "36" height = "36" alt="Hi">
+            </div>
+            <p class ="modal-three-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
 
+        </div>
+    </div>
+
+    <div class="modal-four-overlay is-open">
+        <div class="modal-window-four">
+            <button class = "close-btn" type = "submit">
+                <img class = "modal-close" src = "images/cross.svg" width = "11" height = "11">
+            </button>
+            <p class = "modal-four-header">Our Locations</p>
+            <img class = "modal-four-map" src="./images/map.png" alt="Hi">
+            <button class = "modal-four-btn">Open map</button>
+        </div>
+    </div>
+
+    <div class="modal-five-overlay is-open">
+        <div class="modal-window-five">
+            <button class = "close-btn" type = "submit">
+                <img class = "modal-close" src = "images/cross.svg" width = "11" height = "11">
+            </button>
+            <p class = "modal-five-header">Thank you for your interest in owning an Ice Cream shop</p>
+            <p class = "modal-five-text">Due to the overwhelming volume of franchise requests we are not accepting new franchisee applications at this time. Once the application process resumes, we will contact you for further information. Please fill out the contact information below and we will reach out for additional information. We appreciate your patience.</p>
+            <form class = "modal-five-form">
+                <input class = "modal-five-input" type="text" placeholder="Name">
+                <input class = "modal-five-input" type="tel" placeholder="Phone">
+                <input class = "modal-five-input" type="email" placeholder="Email">
+                <textarea class = "modal-five-textarea" placeholder="Comment"></textarea>
+            </form>
+            <button class = "modal-five-submit-button" type="submit">Submit</button>
+        </div>
+    </div>
 
 </body>
 </html>
